Create util phone validation with regex (indo code) & multiple error response
